# x6100_base_patch

./: .mxproject  CMakeLists.txt  README.md  X6100_BBFW_V1.1.6_221112001.bin.xml  filters_hpf.data  filters_lpf.data  fir_am_fm_4.txt  fir_am_fm_4_oem.txt  fir_decim_2.txt  fir_decim_2_oem.txt  fir_ssb_cw_8.txt  fir_ssb_cw_oem.txt  gen_filters.py  gen_raised_cosine.py  gen_sin_cos_table.py  gen_tx_power_scales.py  patch.py  startup_stm32f427xx.s  stm32f427zgtx_flash.ld  stm32f427zgtx_flash.ld.format  x6100_mcu.ioc
Core/Inc/: aic3204.h  anf.h  cessb.h  comm.h  compressor.h  cw_peak.h  external.h  if_shift.h  iirdecim.h  modulations.h  noise_blanker.h  noise_reduction.h  offsets.h  powf.h  ring_buf.h  utils.h  vox.h
Core/Inc/math/: const.h  fast_math.h  log10.h  pow.h
Core/Src/: aic3204.c  anf.c  cessb.c  comm.c  compressor.c  compressor_old.c  cw_peak.c  external.c  if_shift.c  iirdecim.c  log10f.c  main.c  modulations.c  noise_blanker.c  noise_blanker_data.c  noise_reduction.c  noise_reduction_data.c  powf.c  ring_buf.c  sin_cos.c  sin_values.c  sqrtf.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  utils.c  vox.c
Core/Src/math/: log10.c  pow.c  sin_cos_tables.c
Drivers/CMSIS/DSP/Source/FastMathFunctions/: arm_atan2_f32.c
asm/: helper.s  offsets.s  patch.ld.tpl
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
firmwares/: X6100_BBFW_V1.1.6_221112001_r1.xgf  X6100_BBFW_V1.1.6_221112001_r2.xgf  X6100_BBFW_V1.1.6_221112001_r2_plus15.5.xgf  X6100_BBFW_V1.1.6_221112001_r3.xgf  X6100_BBFW_V1.1.6_221112001_r4.xgf  X6100_BBFW_V1.1.6_221112001_r6.xgf  X6100_BBFW_V1.1.6_221112001_r7.xgf  X6100_BBFW_V1.1.6_230307001_r7.xgf  X6100_BBFW_V1.1.6_230307001_r8.xgf  X6100_BBFW_V1.1.6_230307001_r9.xgf
